# VARKYNTHPlayer

./: README.md  UpdateApk.html  UpdateApk.json  d.txt
.github/workflows/: android.yml  c-cpp.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeList.txt  CMakeLists.txt  aaudio_player.cpp  audiotrack_player.cpp
app/src/main/java/com/VARKYNTH/Player/: FileUtil.java  MainActivity.java  MediaButtonReceiver.java  SketchwareUtil.java  VARTHAboutActivity.java  VARTHApplication.java  VARTHConstants.java  VARTHDonateActivity.java  VARTHEffectsManager.java  VARTHFxActivity.java  VARTHMusicService.java  VARTHNotificationManager.java  VARTHPlaybackCore.java  VARTHProgressDispatcher.java  VARTHRepeatMode.java  VARTHSettingsActivity.java  VARTHSettingsExperimental.java  VARTHUpdate.java
app/src/main/jniLibs/arm64-v8a/lib/pkgconfig/: libswresample.pc
app/src/main/res/drawable-xhdpi/: ic_telegram.xml
app/src/main/res/layout/: dialog_update.xml  list_music_view.xml  list_view_settings.xml  main.xml  player_card.xml  player_root.xml  setting_syn_cast.xml  topbarmain.xml  topbarother.xml  varth_about.xml  varth_donate.xml  varth_fx.xml  varth_settings.xml  varth_settings_experimental.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-en/: strings.xml  strings_dialog.xml  strings_settings.xml
app/src/main/res/values-ru/: strings.xml  strings_dialog.xml  strings_settings.xml
app/src/main/res/xml/: file_paths.xml
app/src/splash/jni/: cmakeList.txt
(+29 files in other folders)
